Try out Dexie demo

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     </div>
   </div>
   <script defer src="assets/js/material.min.js"></script>
+  <script src="https://unpkg.com/dexie@latest/dist/dexie.js"></script>
   <script type="module" src="assets/js/app.js"></script>
 </body>
 </html>
