--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
   </div>
   <script defer src="assets/js/material.min.js"></script>
-  <script src="https://unpkg.com/dexie@latest/dist/dexie.js"></script>
+  <script src="https://unpkg.com/dexie@3.0.2/dist/dexie.min.js"></script>
   <script type="module" src="assets/js/app.js"></script>
 </body>
 </html>
